<resources>
    <string name="app_name">Stundenplaner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stundenplaner</string>
    <string name="nav_header_subtitle">Plane deine Stunden</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_planer">Planer</string>
    <string name="menu_passwords">Passwords</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_modules">Modules</string>
    <string name="menu_bundesland">State setting</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_raum">Raum</string>
    <string name="dialog_prof">Dozent</string>
    <array name="tableTimes">
        <item>08:00</item>
        <item>09:45</item>
        <item>11:30</item>
        <item>14:00</item>
        <item>15:45</item>
        <item>17:30</item>
        <item>19:15</item>
    </array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="bundesland_fragment_text">This is Bundesland Einstellung fragment</string>
    <string name="bundesland_prompt">Wähle dein Bundesland aus</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string-array name="bundeslaender_array">
        <item>Baden-Württemberg</item>
        <item>Bayern</item>
        <item>Berlin</item>
        <item>Brandenburg</item>
        <item>Bremen</item>
        <item>Hamburg</item>
        <item>Hessen</item>
        <item>Mecklenburg-Vorpommern</item>
        <item>Niedersachsen</item>
        <item>Nordrhein-Westfalen</item>
        <item>Rheinland-Pfalz</item>
        <item>Saarland</item>
        <item>Sachsen</item>
        <item>Sachsen-Anhalt</item>
        <item>Schleswig-Holstein</item>
        <item>Thüringen</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
