<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_planer"
            android:icon="@drawable/ic_menu_planer"
            android:title="@string/menu_planer" />
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/ic_menu_modules"
            android:title="@string/menu_modules" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/ic_menu_passwords"
            android:title="@string/menu_passwords" />
        <item
            android:id="@+id/nav_bundesland"
            android:icon="@drawable/ic_menu_bundesland"
            android:title="@string/menu_bundesland" />
    </group>
</menu>
